--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,103 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html * {
+    color: #BB86FC;
+    font-family: 'Shadows Into Light Two', cursive;
+    letter-spacing: 2px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    margin: 20px;
+    background-color: #0E0B16;
+}
+
+h1 {
+    font-size: 40px;
+    letter-spacing: 7px;
+}
+
+p {
+    margin: 5px;
+}
+  
+ol, ul {
+    padding-left: 30px;
+    margin: 5px;
+}
+
+button {
+    background: transparent;
+}
+
+.board-row:after {
+    clear: both;
+    content: "";
+    display: table;
+}
+
+.status {
+    margin-bottom: 10px;
+}
+
+.square {
+    background-color: #0E0B16;
+    border: 1px solid #BB86FC;
+    float: left;
+    font-size: 70px;
+    line-height: 90px;
+    height: 90px;
+    margin-right: -1px;
+    margin-top: -1px;
+    padding: 0;
+    text-align: center;
+    width: 90px;
+}
+  
+.square:focus {
+    outline: none;
+}
+
+.kbd-navigation .square:focus {
+    background: #ddd;
+}
+
+.game {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.full-row {
+    flex: 0 0 100%;
+}
+
+.tc {
+    text-align: center;
+}
+
+.game-info {
+    margin-left: 20px;
+}
+
+.status {
+    font-size: 1.3em;
+}
+
+.x-color {
+    color: #3700B3;
+}
+
+.o-color {
+    color: #A239CA;
+}
+
+.travel-btn {
+    border-radius: 5px;
+    padding: 5px;
+    margin: 3px;
+    border: 1px solid #BB86FC;
+    width: 100%;
+}
+
+button:hover {
+    background-color: rgba(172, 168, 185, 0.3);
 }
